--- a/examples/sample-empty.tex
+++ b/examples/sample-empty.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{cv4tw}% options are inherited from article class, and automatically given to this class
+\documentclass[a4paper,11pt]{cvamm}% options are inherited from article class, and automatically given to this class
 % Available theme : simple, compact, sharp
 % Available scheme : celadon, tan, gray, purple, teal, minuit
 %\usetheme[optional scheme]{theme}
