--- a/examples/sample-jules-verne-sharp.tex
+++ b/examples/sample-jules-verne-sharp.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{cv4tw}% options are inherited from article class, and automatically given to this class
+\documentclass[a4paper,11pt]{cvamm}% options are inherited from article class, and automatically given to this class
 %\usetheme[optional scheme]{theme}
 \usetheme[minuit]{sharp}
 % Not happy with the default style, or bullet ? Define yours !
