added bitbucket altemail and skype, changed icon for languages

--- a/class/cvamm.cls
+++ b/class/cvamm.cls
@@ -102,6 +102,7 @@
 {github}{ \qdlink{https://www.github.com/}{cvcontact#1}{}}%
 {facebook}{ \qdlink{https://www.facebook.com/}{cvcontact#1}{}}%
 {googleplus}{ \qdlink{https://plus.google.com/}{cvcontact#1}{}}%
+{bitbucket}{ \qdlink{https://www.bitbucket.org/}{cvcontact#1}{}}%
 }[{\qdget{cvcontact#1}}]
 }
 \newcommand*{\ifcvcontact}[3][]{\qdif{cvcontact#1}{#2}{#3}}
