--- a/styles/cvamm-theme-core.sty
+++ b/styles/cvamm-theme-core.sty
@@ -16,6 +16,7 @@
 \rendercontactifdefined{custom1}%
 \rendercontactifdefined{custom2}%
 \rendercontactifdefined{email}%
+\rendercontactifdefined{emailalt}%
 \rendercontactifdefined{homepage}%
 \rendercontactifdefined{homepagessl}%
 \rendercontactifdefined{customhomepage}%
@@ -29,6 +30,7 @@
 \rendercontactifdefined{custom4}%
 \rendercontactifdefined{custom5}%
 \rendercontactifdefined{github}%
+\rendercontactifdefined{bitbucket}%
 \rendercontactifdefined{linkedin}%
 \rendercontactifdefined{twitter}%
 \rendercontactifdefined{googleplus}%
