--- a/styles/cvamm-scheme.sty
+++ b/styles/cvamm-scheme.sty
@@ -108,9 +108,11 @@
 %Contact items style
 \setmystyle[cvcontact]{\small\sffamily}
 \setmystyle[email]{\mystyle[cvcontact]}
+\setmystyle[emailalt]{\mystyle[cvcontact]}
 \setmystyle[facebook]{\mystyle[cvcontact]}
 \setmystyle[twitter]{\mystyle[cvcontact]}
 \setmystyle[github]{\mystyle[cvcontact]}
+\setmystyle[bitbucket]{\mystyle[cvcontact]}
 \setmystyle[googleplus]{\mystyle[cvcontact]}
 \setmystyle[linkedin]{\mystyle[cvcontact]}
 \setmystyle[skype]{\mystyle[cvcontact]}
@@ -147,14 +149,16 @@
 \setmystyle[custom8bullet]{{\mystyle[icons]-}}
 \setmystyle[custom9bullet]{{\mystyle[icons]-}}
 \setmystyle[githubbullet]{{\mystyle[icons]\faGithub}}
+\setmystyle[bitbucketbullet]{{\mystyle[icons]\faBitbucket}}
 \setmystyle[linkedinbullet]{{\mystyle[icons]\faLinkedin}}
 \setmystyle[twitterbullet]{{\mystyle[icons]\faTwitter}}
 \setmystyle[vkbullet]{{\mystyle[icons]\faVK}}
 \setmystyle[facebookbullet]{{\mystyle[icons]\faFacebook}}
-%\setmystyle[skypebullet]{{\mystyle[icons]\faSkype}} %% Not yet support by fontawesome
+\setmystyle[skypebullet]{{\mystyle[icons]\faSkype}}
 \setmystyle[pinterestbullet]{{\mystyle[icons]\faPinterest}}
 \setmystyle[googleplusbullet]{{\mystyle[icons]\faGooglePlus}}
 \setmystyle[emailbullet]{{\mystyle[icons]\faEnvelope}}
+\setmystyle[emailaltbullet]{{\mystyle[icons]\faEnvelope}}
 \setmystyle[cellphonebullet]{{\mystyle[icons]\faMobilePhone}}
 \setmystyle[phonebullet]{{\mystyle[icons]\faPhone}}
 \setmystyle[faxbullet]{{\mystyle[icons]\faPrint}}
@@ -163,7 +167,7 @@
 \setmystyle[customhomepagebullet]{{\mystyle[icons]\faLaptop}}
 \setmystyle[addressbullet]{{\mystyle[icons]\faHome}}
 \setmystyle[agebullet]{{\mystyle[icons]\faCalendar}}
-\setmystyle[spokenlanguagesbullet]{{\mystyle[icons]\faComments}}
+\setmystyle[spokenlanguagesbullet]{{\mystyle[icons]\faLanguage}}
 \setmystyle[fieldbullet]{{\mystyle[icons]\faComments}}
 
 \endinput
