--- a/styles/cvamm-scheme.sty
+++ b/styles/cvamm-scheme.sty
@@ -98,8 +98,8 @@
 
 % Field items style
 \setmystyle[field] {\mystyle[default]\color{main}}
-\setmystyle[fieldrateempty] {\mystyle[icons]\faStarEmpty}
-\setmystyle[fieldratefull] {\mystyle[icons]\faStar}
+\setmystyle[fieldrateempty] {\mystyle[icons]\faCircle}
+\setmystyle[fieldratefull] {\mystyle[icons]\faCircleO}
 
 % Skills items style
 \setmystyle[cvskillname] {\mystyle[default]\color{main}}
@@ -119,7 +119,7 @@
 \setmystyle[phone]{\mystyle[cvcontact]}
 \setmystyle[cellphone]{\mystyle[cvcontact]}
 \setmystyle[fax]{\mystyle[cvcontact]}
-\setmystyle[age]{\mystyle[cvcontact]}
+\setmystyle[birthday]{\mystyle[cvcontact]}
 \setmystyle[vk]{\mystyle[cvcontact]}
 \setmystyle[custom0]{\mystyle[cvcontact]}
 \setmystyle[custom1]{\mystyle[cvcontact]}
@@ -166,7 +166,7 @@
 \setmystyle[homepagesslbullet]{{\mystyle[icons]\faLaptop}}
 \setmystyle[customhomepagebullet]{{\mystyle[icons]\faLaptop}}
 \setmystyle[addressbullet]{{\mystyle[icons]\faHome}}
-\setmystyle[agebullet]{{\mystyle[icons]\faCalendar}}
+\setmystyle[birthdaybullet]{{\mystyle[icons]\faBirthdayCake}}
 \setmystyle[spokenlanguagesbullet]{{\mystyle[icons]\faLanguage}}
 \setmystyle[fieldbullet]{{\mystyle[icons]\faComments}}
 
