--- a/styles/cvamm-theme-core.sty
+++ b/styles/cvamm-theme-core.sty
@@ -149,7 +149,7 @@
 	{\hspace*{\cvleftwidth}\mystyle[subsectiontitle] #1}\\[1.5em]
 	\begin{tabular}[t]{*{#2}{rl}}
 }{
-	\end{tabular}\\[2em]
+	\end{tabular}\\
 	\end{minipage}
 }
 
