changed scheme files

--- a/styles/cvamm-scheme.sty
+++ b/styles/cvamm-scheme.sty
@@ -138,6 +138,8 @@
 \setmystyle[twitter]{\mystyle[cvcontact]}
 \setmystyle[github]{\mystyle[cvcontact]}
 \setmystyle[bitbucket]{\mystyle[cvcontact]}
+\setmystyle[orcid]{\mystyle[cvcontact]}
+\setmystyle[researchgate]{\mystyle[cvcontact]}
 \setmystyle[googleplus]{\mystyle[cvcontact]}
 \setmystyle[linkedin]{\mystyle[cvcontact]}
 \setmystyle[skype]{\mystyle[cvcontact]}
@@ -175,6 +177,8 @@
 \setmystyle[custom9bullet]{{\mystyle[icons]-}}
 \setmystyle[githubbullet]{{\mystyle[icons]\faGithub}}
 \setmystyle[bitbucketbullet]{{\mystyle[icons]\faBitbucket}}
+\setmystyle[orcidbullet]{{\mystyle[icons]\aiOrcid}}
+\setmystyle[researchgatebullet]{{\mystyle[icons]\aiResearchGate}}
 \setmystyle[linkedinbullet]{{\mystyle[icons]\faLinkedin}}
 \setmystyle[twitterbullet]{{\mystyle[icons]\faTwitter}}
 \setmystyle[vkbullet]{{\mystyle[icons]\faVK}}
