--- a/styles/cvamm-theme-core.sty
+++ b/styles/cvamm-theme-core.sty
@@ -7,6 +7,7 @@
 \RequirePackage{amssymb}
 \RequirePackage{fontspec}
 \RequirePackage{fontawesome}
+\RequirePackage{academicons}
 \RequirePackage{realboxes}
 \RequirePackage{array}
 \RequirePackage{forloop}
@@ -28,9 +29,11 @@
     \rendercontactifdefined{custom3}%
     \rendercontactifdefined{custom4}%
     \rendercontactifdefined{custom5}%
+    \rendercontactifdefined{orcid}%
     \rendercontactifdefined{github}%
     \rendercontactifdefined{bitbucket}%
     \rendercontactifdefined{linkedin}%
+    \rendercontactifdefined{researchgate}%
     \rendercontactifdefined{twitter}%
     \rendercontactifdefined{googleplus}%
     \rendercontactifdefined{facebook}%
@@ -49,6 +52,21 @@
 }%
 
 \AtBeginDocument{\maketitle}
+
+% Setup metadata
+\hypersetup{
+    bookmarks=true,
+    breaklinks=true,
+    colorlinks=false,
+    pdfborder={0 0 0},
+}
+
+\AtEndPreamble{
+    \hypersetup{
+        pdftitle={\@cvfirstname\ \@cvlastname\@ifundefined{@cvacademictitle}{}{, \@cvacademictitle} -- \@ifundefined{@cvtopic}{}{\@cvtopic}},
+        pdfauthor={\@cvfirstname\ \@cvlastname\@ifundefined{@cvacademictitle}{}{, \@cvacademictitle}},
+    }
+}
 
 % Set \emph command with "em" color
 \DeclareTextFontCommand{\emph}{\color{main}}
