changed the sharp theme to include 4 columns in the contacts field, also made the title responsive

--- a/styles/cvamm-theme-core.sty
+++ b/styles/cvamm-theme-core.sty
@@ -25,7 +25,7 @@
     \rendercontactifdefined{phone}%
     \rendercontactifdefined{fax}%
 }%
-\setcvcontactszone[social]{%
+\setcvcontactszone[social1]{%
     \rendercontactifdefined{custom3}%
     \rendercontactifdefined{custom4}%
     \rendercontactifdefined{custom5}%
@@ -34,6 +34,10 @@
     \rendercontactifdefined{bitbucket}%
     \rendercontactifdefined{linkedin}%
     \rendercontactifdefined{researchgate}%
+}%
+\setcvcontactszone[social2]{%
+    \rendercontactifdefined{custom6}%
+    \rendercontactifdefined{custom7}%
     \rendercontactifdefined{twitter}%
     \rendercontactifdefined{googleplus}%
     \rendercontactifdefined{facebook}%
@@ -42,8 +46,6 @@
     \rendercontactifdefined{pinterest}%
 }%
 \setcvcontactszone[extra]{%
-    \rendercontactifdefined{custom6}%
-    \rendercontactifdefined{custom7}%
     \rendercontactifdefined{custom8}%
     \rendercontactifdefined{custom9}%
     \rendercontactifdefined{birthday}%
@@ -85,7 +87,7 @@
 
 %Useful lengths
 \newlength{\cvhspace}\setlength{\cvhspace}{2ex}
-\newlength{\cvleftwidth}\setlength{\cvleftwidth}{4.5cm}
+\newlength{\cvleftwidth}\setlength{\cvleftwidth}{4cm}
 \newlength{\cvrightwidth}\setlength{\cvrightwidth}{\textwidth - \cvleftwidth - \cvhspace}
 \newlength{\cvfielditemparskip}\setlength{\cvfielditemparskip}{0.5em}
 \newlength{\cvskillitemparskip}\setlength{\cvskillitemparskip}{-0.8em}
