--- a/styles/cvamm-theme-sharp.sty
+++ b/styles/cvamm-theme-sharp.sty
@@ -1,11 +1,10 @@
 %Useful lengths
-\newlength{\cvtitlewidth}\setlength{\cvtitlewidth}{8cm}
-\newlength{\cvnamewidth}\setlength{\cvnamewidth}{6cm}
-\newlength{\cvpicturewidth}\setlength{\cvpicturewidth}{2.4cm}
-\newlength{\cvassetspanelwidth}\setlength{\cvassetspanelwidth}{12cm}
+\newlength{\cvtitlewidth}\setlength{\cvtitlewidth}{0.45\textwidth}
+\newlength{\cvnamewidth}\setlength{\cvnamewidth}{0.8\cvtitlewidth}
+\newlength{\cvpicturewidth}\setlength{\cvpicturewidth}{0.15\textwidth}
+\newlength{\cvassetspanelwidth}\setlength{\cvassetspanelwidth}{0.4\textwidth}
 \newlength{\cvassetitemsep}\setlength{\cvassetitemsep}{0.4em}
-\newlength{\cvassetspanelleftmargin}\setlength{\cvassetspanelleftmargin}{1cm}
-\newlength{\cvcontactpanelwidth}\setlength{\cvcontactpanelwidth}{7cm}
+\newlength{\cvassetspanelleftmargin}\setlength{\cvassetspanelleftmargin}{0em}
 
 \DeclareTextFontCommand{\emph}{\color{main}}
 
@@ -13,45 +12,70 @@
 	\DeclareTextFontCommand{\emph}{\color{contrastmain}}
 	\colorlet{iconstemp}{icons}
 	\colorlet{icons}{contrast}
-	\hspace*{-1\marginparwidth}\colorbox{title}{\hspace*{\marginparwidth}\begin{minipage}{\paperwidth}
-	\@ifundefined{@cvpicture}{}{\begin{minipage}[m]{\cvpicturewidth}\fboxsep=1mm\fboxrule=0.05pt\fcolorbox{black}{white}{\includegraphics[keepaspectratio=true,width=\cvpicturewidth]{\@cvpicture}}\end{minipage}\hspace{2ex}}
-	\begin{minipage}[m]{\cvtitlewidth}
-	\mystyle[name]\color{contrast}{\@ifundefined{@cvacademictitle}{}{\small\@cvacademictitle~}}\@cvfirstname~\@cvlastname
-	\@ifundefined{@cvtitle}{}{{\\\mystyle[title]\color{contrast}\@cvtitle}}
-	\end{minipage}\hfill
-	\begin{minipage}[m]{\cvassetspanelwidth}
-		\ifcvasset[0]{\begin{list}{\mystyle[assetbullet]}{\setlength{\leftmargin}{\cvassetspanelleftmargin}}
-\setlength{\itemsep}{\cvassetitemsep}
-\renderassetifdefined{0}
-\renderassetifdefined{1}
-\renderassetifdefined{2}
-\renderassetifdefined{3}
-\renderassetifdefined{4}
-\renderassetifdefined{5}
-\renderassetifdefined{6}
-\renderassetifdefined{7}
-\renderassetifdefined{8}
-\renderassetifdefined{9}
-\end{list}}{}
-	\end{minipage}
-	\end{minipage}}\\[3ex]
+	\hspace*{-1\marginparwidth}
+    \colorbox{title}{\hspace*{\marginparwidth}
+        \begin{minipage}{\paperwidth}
+            \@ifundefined{@cvpicture}{}{
+                \begin{minipage}[m]{\cvpicturewidth}
+                    \fboxsep=1mm
+                    \fboxrule=0.05pt
+                    \fcolorbox{black}{white}{
+                        \includegraphics[keepaspectratio=true,width=\cvpicturewidth]{\@cvpicture}
+                    }
+                \end{minipage}
+                \hspace{1em}
+            }
+           	\begin{minipage}[m]{\cvtitlewidth}
+        	    \mystyle[name]
+                \color{contrast}{\@ifundefined{@cvacademictitle}{}{\small\@cvacademictitle~}}
+                \@cvfirstname~\@cvlastname
+        	    \@ifundefined{@cvtitle}{}{{\\\mystyle[title]\color{contrast}\@cvtitle}}
+        	\end{minipage}
+            %\hfill
+        	\begin{minipage}[m]{\cvassetspanelwidth}
+                \ifcvasset[0]{
+                    \begin{list}{\mystyle[assetbullet]}{\setlength{\leftmargin}{\cvassetspanelleftmargin}}
+                        \setlength{\itemsep}{\cvassetitemsep}
+                        \renderassetifdefined{0}
+                        \renderassetifdefined{1}
+                        \renderassetifdefined{2}
+                        \renderassetifdefined{3}
+                        \renderassetifdefined{4}
+                        \renderassetifdefined{5}
+                        \renderassetifdefined{6}
+                        \renderassetifdefined{7}
+                        \renderassetifdefined{8}
+                        \renderassetifdefined{9}
+                    \end{list}
+                }{}
+        	\end{minipage}
+    	\end{minipage}
+    }\\[3ex]
 	\colorlet{icons}{iconstemp}
 	\@ifundefined{@cvquote}{}{{\centering\mystyle[quote]\@cvquote\\[2ex]}}
-	\begin{minipage}[t]{0.3\textwidth} \begin{tabular}[t]{@{}c@{}l@{}}
-\cvcontactszone[main]
-\end{tabular}
+	\begin{minipage}[t]{0.2\textwidth} 
+        \begin{tabular}[t]{@{}c@{}l@{}}
+            \cvcontactszone[main]
+        \end{tabular}
 	\end{minipage}
-\hfill
-	\begin{minipage}[t]{0.3\textwidth} \begin{tabular}[t]{@{}c@{}l@{}}
-\cvcontactszone[social]
-\end{tabular}
+    \hfill
+	\begin{minipage}[t]{0.2\textwidth}
+        \begin{tabular}[t]{@{}c@{}l@{}}
+            \cvcontactszone[social1]
+        \end{tabular}
 	\end{minipage}
-\hfill
-	\begin{minipage}[t]{0.3\textwidth} \begin{tabular}[t]{@{}c@{}l@{}}
-\cvcontactszone[extra]
-\end{tabular}
+    \hfill
+	\begin{minipage}[t]{0.2\textwidth}
+        \begin{tabular}[t]{@{}c@{}l@{}}
+            \cvcontactszone[social2]
+        \end{tabular}
+    \end{minipage}
+    \hfill
+	\begin{minipage}[t]{0.2\textwidth} 
+        \begin{tabular}[t]{@{}c@{}l@{}}
+            \cvcontactszone[extra]
+        \end{tabular}
 	\end{minipage}\\
-\\[1em]
 }
 
 \renewcommand*{\renderasset}[1]{\item{\mystyle[asset]\color{contrast} \cvasset[#1]}}
