--- a/styles/cvamm-scheme.sty
+++ b/styles/cvamm-scheme.sty
@@ -130,6 +130,13 @@
 \setmystyle[cvskillname] {\mystyle[default]\color{main}}
 \setmystyle[cvskilldescription] {\mystyle[default]}
 
+% Publication items style
+\setmystyle[cvpubauthors] {\sffamily\color{main}\bfseries}
+\setmystyle[cvpubtitle] {\mystyle[default]}
+\setmystyle[cvpubjournal] {\itshape\sffamily}
+\setmystyle[cvpubdoi] {\mystyle[default]}
+\setmystyle[cvpubwarning] {\mystyle[default]\bfseries}
+
 %Contact items style
 \setmystyle[cvcontact]{\small\sffamily}
 \setmystyle[email]{\mystyle[cvcontact]}
@@ -164,6 +171,7 @@
 \setmystyle[customhomepage]{\mystyle[cvcontact]}
 \setmystyle[address]{\mystyle[cvcontact]\scshape}
 \setmystyle[spokenlanguages]{\mystyle[cvcontact]\scshape}
+
 %Contact bullets
 \setmystyle[custom0bullet]{{\mystyle[icons]-}}
 \setmystyle[custom1bullet]{{\mystyle[icons]-}}
