--- a/styles/cvamm-scheme.sty
+++ b/styles/cvamm-scheme.sty
@@ -47,12 +47,13 @@
 	\definecolorifnotdef{soft}{RGB}{0,17,34}
 }
 %
-% Earth scheme
+% Subdued scheme
 %
-\DeclareOption{earth}{
-    \definecolorifnotdef{main}{RGB}{42, 31, 32}
-    \definecolorifnotdef{contrastmain}{RGB}{33,107,87}
-    \definecolorifnotdef{soft}{RGB}{76, 36, 26}
+\DeclareOption{subdued}{
+    \definecolorifnotdef{main}{RGB}{51,107,135}
+    \definecolorifnotdef{contrastmain}{RGB}{42,49,50}
+    \definecolorifnotdef{soft}{RGB}{118,54,38}
+    \definecolorifnotdef{light}{RGB}{148,84,68}
 }
 %
 % Warmnatural scheme 2
@@ -61,6 +62,7 @@
     \definecolorifnotdef{main}{RGB}{219,149,1}
     \definecolorifnotdef{contrastmain}{RGB}{192,88,5}
     \definecolorifnotdef{soft}{RGB}{110,103,2}
+    \definecolorifnotdef{light}{RGB}{140,133,32}
 }
 %
 % Urban scheme
@@ -71,6 +73,16 @@
     \definecolorifnotdef{soft}{RGB}{125,86,66}
     \definecolorifnotdef{light}{RGB}{155,116,96}
 }
+%
+% Fresh scheme
+%
+\DeclareOption{spicy}{
+    \definecolorifnotdef{main}{RGB}{203,99,27}
+    \definecolorifnotdef{contrastmain}{RGB}{175,68,37}
+    \definecolorifnotdef{soft}{RGB}{102,46,28}
+    \definecolorifnotdef{light}{RGB}{132,76,58}
+}
+
 \ProcessOptions
 
 \definecolorifnotdef{default}{rgb}{0,0,0}
@@ -83,7 +95,7 @@
 % Color for main title
 \colorletifnotdef{title} {soft}
 % Color for person name
-\colorletifnotdef{name}{main}
+\colorletifnotdef{name} {main}
 % Section title is used at each new section/skill subsection
 \colorletifnotdef{sectiontitle} {soft}
 % Subsection title is used at each job/education/skill entry
@@ -112,19 +124,20 @@
 \setmystyle[asset] {\mystyle[default]\sloppy}
 \setmystyle[assetbullet] {\mystyle[icons]{\faStar}}
 
-% Jobs items style
+% Story and mission items style
 \setmystyle[cvstorytitle] {\sffamily\color{main}\bfseries}
 \setmystyle[cvstorydatelocation] {\itshape\sffamily}
 \setmystyle[cvstoryshort] {\sffamily}
 \setmystyle[cvstorydescription] {\sffamily}
 \setmystyle[cvstoryquicknotes] {\small\scshape\sffamily}
-\setmystyle[missionbullet] {\color{missionbullet}$\rhd$}
+\setmystyle[missionbullet] {\color{missionbullet}\faAngleDoubleRight}
 \setmystyle[mission] {\mystyle[default]}
 
 % Field items style
 \setmystyle[field] {\mystyle[default]\color{main}}
 \setmystyle[fieldrateempty] {\mystyle[icons]\faCircleO}
 \setmystyle[fieldratefull] {\mystyle[icons]\faCircle}
+\setmystyle[fieldbullet]{{\mystyle[icons]\faComments}}
 
 % Skills items style
 \setmystyle[cvskillname] {\mystyle[default]\color{main}}
@@ -145,6 +158,7 @@
 \setmystyle[twitter]{\mystyle[cvcontact]}
 \setmystyle[github]{\mystyle[cvcontact]}
 \setmystyle[bitbucket]{\mystyle[cvcontact]}
+\setmystyle[stackexchange]{\mystyle[cvcontact]}
 \setmystyle[orcid]{\mystyle[cvcontact]}
 \setmystyle[researchgate]{\mystyle[cvcontact]}
 \setmystyle[googleplus]{\mystyle[cvcontact]}
@@ -185,6 +199,7 @@
 \setmystyle[custom9bullet]{{\mystyle[icons]-}}
 \setmystyle[githubbullet]{{\mystyle[icons]\faGithub}}
 \setmystyle[bitbucketbullet]{{\mystyle[icons]\faBitbucket}}
+\setmystyle[stackexchangebullet]{{\mystyle[icons]\faStackExchange}}
 \setmystyle[orcidbullet]{{\mystyle[icons]\aiOrcid}}
 \setmystyle[researchgatebullet]{{\mystyle[icons]\aiResearchGate}}
 \setmystyle[linkedinbullet]{{\mystyle[icons]\faLinkedin}}
@@ -205,6 +220,5 @@
 \setmystyle[addressbullet]{{\mystyle[icons]\faHome}}
 \setmystyle[birthdaybullet]{{\mystyle[icons]\faBirthdayCake}}
 \setmystyle[spokenlanguagesbullet]{{\mystyle[icons]\faLanguage}}
-\setmystyle[fieldbullet]{{\mystyle[icons]\faComments}}
 
 \endinput
