Added cv references field modified from cv4tw forks, modified some styles and bullets

--- a/class/cvamm.cls
+++ b/class/cvamm.cls
@@ -122,6 +122,7 @@
 \newcommand*{\story}[5]{ }
 \newcommand*{\pubsection}[2]{ }
 \newcommand*{\pubitem}[5]{ }
+\newcommand*{\cvreference}[7]{ }
 \newcommand*{\renderasset}{ }
 \newcommand*{\renderassetifdefined}{ }
 \newcommand*{\rendercontact}{ }
