--- a/styles/cvamm-theme-core.sty
+++ b/styles/cvamm-theme-core.sty
@@ -11,7 +11,8 @@
 \RequirePackage{realboxes}
 \RequirePackage{array}
 \RequirePackage{forloop}
-\RequirePackage[symbol]{footmisc}
+\RequirePackage{footmisc}
+
 
 \setcvcontactszone[main]{%
     \rendercontactifdefined{custom0}%
