modified sharp style header

--- a/styles/cvamm-scheme.sty
+++ b/styles/cvamm-scheme.sty
@@ -122,7 +122,7 @@
 \setmystyle[icons] {\sffamily\color{icons}\small}
 \setmystyle[footnote] {\mystyle[default]\color{footnote}\scshape\footnotesize}
 \setmystyle[asset] {\mystyle[default]\sloppy}
-\setmystyle[assetbullet] {\mystyle[icons]{\faStar}}
+\setmystyle[assetbullet] {\mystyle[icons]{\faAngleDoubleRight}}
 
 % Story and mission items style
 \setmystyle[cvstorytitle] {\sffamily\color{main}\bfseries}
