--- a/styles/cvamm-theme-sharp.sty
+++ b/styles/cvamm-theme-sharp.sty
@@ -30,6 +30,7 @@
         	\end{minipage}
             \hfill
         	\begin{minipage}[m]{\cvassetspanelwidth}
+                \raggedright
                 \ifcvasset[0]{
                     \begin{list}{\mystyle[assetbullet]}{\setlength{\leftmargin}{\cvassetspanelleftmargin}}
                         \setlength{\itemsep}{\cvassetitemsep}
