--- a/styles/cvamm-scheme.sty
+++ b/styles/cvamm-scheme.sty
@@ -110,6 +110,8 @@
 \colorletifnotdef{icons} {soft}
 % Footnote
 \colorletifnotdef{footnote} {light}
+% CV Picture Frame
+\colorletifnotdef{picframe} {contrast}
 
 % General style
 \setmystyle[title] {\scshape\sffamily\color{title}\Huge\sloppy}
