--- a/styles/cvamm-theme-core.sty
+++ b/styles/cvamm-theme-core.sty
@@ -12,6 +12,7 @@
 \RequirePackage{array}
 \RequirePackage{forloop}
 \RequirePackage{footmisc}
+\RequirePackage[export]{adjustbox}
 
 
 \setcvcontactszone[main]{%
